--- a/pom.xml
+++ b/pom.xml
@@ -37,10 +37,24 @@
                 <target>9</target>  <!-- Wersja docelowa bytecode'u -->
             </configuration>
         </plugin>
+        <plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.8</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>run</goal>
+                    </goals>
+                </execution>
+            </executions>
+            <configuration>
+                <mainClass>com.jkpr.chinesecheckers.client.gui.ChineseCheckersGUI</mainClass>
+            </configuration>
+        </plugin>
     </plugins>
 </build>
     <profiles>
-        <!-- Profile for running the server application -->
         <profile>
             <id>server</id>
             <activation>
@@ -51,14 +65,13 @@
             </properties>
         </profile>
 
-        <!-- Profile for running the client application -->
         <profile>
             <id>client</id>
             <activation>
                 <activeByDefault>false</activeByDefault>
             </activation>
             <properties>
-                <main.class>com.jkpr.chinesecheckers.client.Client</main.class>
+                <main.class>com.jkpr.chinesecheckers.client.gui.ChineseCheckersGUI</main.class>
             </properties>
         </profile>
     </profiles>
@@ -91,6 +104,12 @@
           <artifactId>gdx-platform</artifactId>
           <version>1.12.1</version>
           <classifier>natives-desktop</classifier>
+      </dependency>
+      <!-- javafx -->
+      <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>17.0.2</version>
       </dependency>
   </dependencies>
 </project>
